bynkc/tests/fixtures/positive/61_uses_with_methods/src/client/main.bynk
commons client

uses base

fn next(c: Count) -> Result[Count, ValidationError] {
  c.successor()
}
