bynkc/tests/fixtures/negative/248_streaming_wrong_type/input.bynk
commons c {
  -- `Streaming` carries a `Stream[String]` body, not an arbitrary value.
  fn bad() -> HttpResult[()] {
    Streaming(42)
  }
}
